--- a/index.html
+++ b/index.html
@@ -369,6 +369,50 @@
                     <td>(space)</td>
                     <td>590</td>
                 </tr>
+                <tr>
+                    <td>0</td>
+                    <td>600</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>610</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>620</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>630</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>640</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>650</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>660</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>670</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>680</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>690</td>
+                </tr>
+                <tr>
+                    <td>Invalid character &nbsp;</td>
+                    <td>001</td>
+                </tr>
             </tbody>
         </table>
     </body>
