--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body style="margin-left:25px; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
         <h1>String Converter</h1>
-        <p>Convert strings into a set of alphanumerical characters. See full chart below to decode. Made by ZombieB#7674</p>
+        <p>Convert strings into a set of alphanumerical characters. See full chart below to decode.</p>
         <p>This doesn't have a use outside of my own software: <a href="https://github.com/ZombieBrine13092">GitHub</a></p>
         <hr>
         <p>Enter a string: <input id="stringInput" size="75"></p>
