--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>This doesn't have a use outside of my own software: <a href="https://github.com/ZombieBrine13092">GitHub</a></p>
         <hr>
         <p>Enter a string: <input id="stringInput" size="75"></p>
-        <button onclick="convertString()">Convert</button>&nbsp;&nbsp;<p style="display: inline;" id="errorText"></p>
+        <button onclick="convertString()">Convert</button>&nbsp;&nbsp;<button onclick="copyText()">Copy</button>&nbsp;&nbsp;<p style="display: inline;" id="errorText"></p>
         <p id="stringOutput">&nbsp;</p>
         </p>
         <hr>
